✅ Test: 예약 확정 추가 test진행