@@ -12,6 +12,9 @@ import com.bangguddle.ownbang.domain.room.entity.Room;
 import com.bangguddle.ownbang.domain.room.repository.RoomRepository;
 import com.bangguddle.ownbang.domain.user.entity.User;
 import com.bangguddle.ownbang.domain.user.repository.UserRepository;
+import com.bangguddle.ownbang.domain.video.entity.Video;
+import com.bangguddle.ownbang.domain.video.entity.VideoStatus;
+import com.bangguddle.ownbang.domain.video.repository.VideoRepository;
 import com.bangguddle.ownbang.global.enums.NoneResponse;
 import com.bangguddle.ownbang.global.handler.AppException;
 import com.bangguddle.ownbang.global.response.SuccessResponse;
@@ -25,12 +28,14 @@ import org.mockito.MockitoAnnotations;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static com.bangguddle.ownbang.global.enums.ErrorCode.*;
 import static com.bangguddle.ownbang.global.enums.SuccessCode.*;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
@@ -52,6 +57,9 @@ class ReservationServiceImplTest {
 
     @Mock
     private AgentWorkhourRepository agentWorkhourRepository;
+
+    @Mock
+    private VideoRepository videoRepository;
 
     @BeforeEach
     void setUp() {
@@ -101,14 +109,16 @@ class ReservationServiceImplTest {
     }
 
     @Test
-    @DisplayName("예약 목록 조회 성공")
-    void getMyReservationList_Success() {
+    @DisplayName("예약 목록 조회 성공 (비디오 상태 포함)")
+    void getMyReservationList_SuccessWithVideoStatus() {
         Long userId = 1L;
         LocalDateTime now = LocalDateTime.now();
-        Reservation reservation1 = Reservation.builder().room(Room.builder().build()).user(User.builder().build()).reservationTime(now).status(ReservationStatus.APPLYED).build();
-        Reservation reservation2 = Reservation.builder().room(Room.builder().build()).user(User.builder().build()).reservationTime(now.plusDays(1)).status(ReservationStatus.CONFIRMED).build();
+        Reservation reservation1 = Reservation.builder().id(1L).room(Room.builder().build()).user(User.builder().build()).reservationTime(now).status(ReservationStatus.APPLYED).build();
+        Reservation reservation2 = Reservation.builder().id(2L).room(Room.builder().build()).user(User.builder().build()).reservationTime(now.plusDays(1)).status(ReservationStatus.CONFIRMED).build();
 
         when(reservationRepository.findByUserId(anyLong())).thenReturn(List.of(reservation1, reservation2));
+        when(videoRepository.findByReservationId(1L)).thenReturn(Optional.empty());
+        when(videoRepository.findByReservationId(2L)).thenReturn(Optional.of(new Video(reservation2, "url", VideoStatus.RECORDED)));
 
         SuccessResponse<ReservationListResponse> response = reservationService.getMyReservationList(userId);
 
@@ -118,13 +128,17 @@ class ReservationServiceImplTest {
 
         List<ReservationResponse> expectedResponses = List.of(
                 ReservationResponse.from(reservation1),
-                ReservationResponse.from(reservation2)
+                ReservationResponse.from(reservation2.completeStatus())
         );
 
         assertThat(response.data().reservations())
                 .usingRecursiveComparison()
                 .ignoringFields("id")
                 .isEqualTo(expectedResponses);
+
+        // 추가적으로 상태 변경을 명시적으로 확인
+        assertThat(response.data().reservations().get(0).status()).isEqualTo(ReservationStatus.APPLYED);
+        assertThat(response.data().reservations().get(1).status()).isEqualTo(ReservationStatus.COMPLETED);
     }
 
     @Test
@@ -190,7 +204,34 @@ class ReservationServiceImplTest {
 
         verify(reservationRepository, times(1)).save(any(Reservation.class));
     }
+    @Test
+    @DisplayName("예약 확정 실패 - 같은 시간, 같은 방에 이미 확정된 예약 존재")
+    void confirmStatusReservation_Fail_DuplicateTimeAndRoom() {
+        Long reservationId = 1L;
+        Room room = mock(Room.class);
+        LocalDateTime reservationTime = LocalDateTime.now();
+        Reservation reservation = Reservation.builder()
+                .id(reservationId)
+                .status(ReservationStatus.APPLYED)
+                .room(room)
+                .reservationTime(reservationTime)
+                .build();
 
+        Reservation existingReservation = Reservation.builder()
+                .id(2L)
+                .status(ReservationStatus.CONFIRMED)
+                .room(room)
+                .reservationTime(reservationTime)
+                .build();
+
+        when(reservationRepository.findById(reservationId)).thenReturn(Optional.of(reservation));
+        when(reservationRepository.existsByRoomAndReservationTimeAndStatus(room, reservationTime, ReservationStatus.CONFIRMED))
+                .thenReturn(Optional.of(existingReservation));
+
+        AppException exception = assertThrows(AppException.class,
+                () -> reservationService.confirmStatusReservation(reservationId));
+        assertEquals(RESERVATION_CONFIRMED_DUPLICATED_TIME_ROOM, exception.getErrorCode());
+    }
     @Test
     @DisplayName("예약 확정 실패 - 이미 확정된 예약")
     void confirmStatusReservation_Fail_AlreadyConfirmed() {
@@ -214,56 +255,40 @@ class ReservationServiceImplTest {
         AppException exception = assertThrows(AppException.class, () -> reservationService.confirmStatusReservation(reservationId));
         assertThat(exception.getErrorCode()).isEqualTo(RESERVATION_CONFIRMED_UNAVAILABLE);
     }
-
     @Test
-    @DisplayName("중개인 예약 목록 조회 성공 - 시간순, ID순 정렬 확인")
-    void getAgentReservations_Success_WithSorting() {
+    @DisplayName("중개인 예약 목록 조회 성공 - 시간순, ID순 정렬 및 상태 변경 확인")
+    void getAgentReservations_Success() {
+        // Given
         Long agentId = 1L;
         LocalDateTime baseTime = LocalDateTime.of(2023, 1, 1, 0, 0);
 
-        // 목업 객체 생성
-        Room room1 = mock(Room.class);
-        Room room2 = mock(Room.class);
-        Room room3 = mock(Room.class);
-        User user1 = mock(User.class);
-        User user2 = mock(User.class);
-        User user3 = mock(User.class);
+        Room room = mock(Room.class);
+        User user = mock(User.class);
 
-        Reservation reservation1 = mock(Reservation.class);
-        Reservation reservation2 = mock(Reservation.class);
-        Reservation reservation3 = mock(Reservation.class);
+        Reservation reservation1 = new Reservation(1L, room, user, baseTime, ReservationStatus.APPLYED);
+        Reservation reservation2 = new Reservation(2L, room, user, baseTime, ReservationStatus.CONFIRMED);
+        Reservation reservation3 = new Reservation(3L, room, user, baseTime.plusDays(1), ReservationStatus.CONFIRMED);
 
-        // Reservation 목업 설정 - 의도적으로 순서를 섞어서 설정
-        when(reservation1.getId()).thenReturn(2L);
-        when(reservation1.getRoom()).thenReturn(room1);
-        when(reservation1.getUser()).thenReturn(user1);
-        when(reservation1.getReservationTime()).thenReturn(baseTime);
-        when(reservation1.getStatus()).thenReturn(ReservationStatus.APPLYED);
-
-        when(reservation2.getId()).thenReturn(1L);
-        when(reservation2.getRoom()).thenReturn(room2);
-        when(reservation2.getUser()).thenReturn(user2);
-        when(reservation2.getReservationTime()).thenReturn(baseTime);  // 같은 시간
-        when(reservation2.getStatus()).thenReturn(ReservationStatus.CONFIRMED);
-
-        when(reservation3.getId()).thenReturn(3L);
-        when(reservation3.getRoom()).thenReturn(room3);
-        when(reservation3.getUser()).thenReturn(user3);
-        when(reservation3.getReservationTime()).thenReturn(baseTime.plusDays(1));
-        when(reservation3.getStatus()).thenReturn(ReservationStatus.APPLYED);
-
-        // 의도적으로 순서를 섞어서 리턴
         when(reservationRepository.findByRoomAgentIdAndReservationTimeAfterOrderByReservationTimeAscIdAsc(eq(agentId), any(LocalDateTime.class)))
-                .thenReturn(List.of(reservation2, reservation1, reservation3));
+                .thenReturn(Arrays.asList(reservation1, reservation2, reservation3));
 
+        when(videoRepository.findByReservationId(2L)).thenReturn(Optional.of(new Video(reservation2, "url", VideoStatus.RECORDED)));
+        when(videoRepository.findByReservationId(3L)).thenReturn(Optional.of(new Video(reservation3, "url", VideoStatus.RECORDING)));
+
+        Reservation completedReservation2 = new Reservation(2L, room, user, baseTime, ReservationStatus.COMPLETED);
+        when(reservationRepository.save(any(Reservation.class))).thenReturn(completedReservation2);
+
+        // When
         SuccessResponse<ReservationListResponse> response = reservationService.getAgentReservations(agentId);
 
+        // Then
         assertThat(response).isNotNull();
         assertThat(response.successCode()).isEqualTo(RESERVATION_LIST_SUCCESS);
         assertThat(response.data().reservations()).hasSize(3);
 
-        // 정렬 확인
         List<ReservationResponse> reservations = response.data().reservations();
+
+        // 시간순, ID순 정렬 확인
         assertThat(reservations.get(0).id()).isEqualTo(1L);
         assertThat(reservations.get(1).id()).isEqualTo(2L);
         assertThat(reservations.get(2).id()).isEqualTo(3L);
@@ -272,10 +297,14 @@ class ReservationServiceImplTest {
         assertThat(reservations.get(1).reservationTime()).isEqualTo(baseTime);
         assertThat(reservations.get(2).reservationTime()).isEqualTo(baseTime.plusDays(1));
 
-        // 추가적인 필드 확인
-        assertThat(reservations.get(0).status()).isEqualTo(ReservationStatus.CONFIRMED);
-        assertThat(reservations.get(1).status()).isEqualTo(ReservationStatus.APPLYED);
-        assertThat(reservations.get(2).status()).isEqualTo(ReservationStatus.APPLYED);
+        // 상태 변경 확인
+        assertThat(reservations.get(0).status()).isEqualTo(ReservationStatus.APPLYED);
+        assertThat(reservations.get(1).status()).isEqualTo(ReservationStatus.COMPLETED);
+        assertThat(reservations.get(2).status()).isEqualTo(ReservationStatus.CONFIRMED);
+
+        verify(reservationRepository).findByRoomAgentIdAndReservationTimeAfterOrderByReservationTimeAscIdAsc(eq(agentId), any(LocalDateTime.class));
+        verify(videoRepository, times(2)).findByReservationId(anyLong());
+        verify(reservationRepository).save(any(Reservation.class));
     }
     @Test
     @DisplayName("중개인 예약 목록 조회 - 빈 목록")
@@ -309,7 +338,7 @@ class ReservationServiceImplTest {
 
         when(roomRepository.findById(roomId)).thenReturn(Optional.of(room));
         when(agentWorkhourRepository.findByAgentAndDay(any(Agent.class), any(AgentWorkhour.Day.class)))
-                .thenReturn(Optional.of(workhour));
+                .thenReturn(workhour);
         when(reservationRepository.findConfirmedReservationTimes(eq(roomId), eq(date)))
                 .thenReturn(List.of(LocalTime.of(10, 0), LocalTime.of(14, 30)));
 
@@ -337,24 +366,5 @@ class ReservationServiceImplTest {
         assertThrows(AppException.class, () -> reservationService.getAvailableTimes(request));
     }
 
-    @Test
-    @DisplayName("근무 시간 정보가 없을 때 실패")
-    void getAvailableTimes_WorkhourNotFound() {
-        // Given
-        Long roomId = 1L;
-        LocalDate date = LocalDate.now().plusDays(1);
-        AvailableTimeRequest request = new AvailableTimeRequest(roomId, date);
-
-        Room room = mock(Room.class);
-        Agent agent = mock(Agent.class);
-        when(room.getAgent()).thenReturn(agent);
-
-        when(roomRepository.findById(roomId)).thenReturn(Optional.of(room));
-        when(agentWorkhourRepository.findByAgentAndDay(any(Agent.class), any(AgentWorkhour.Day.class)))
-                .thenReturn(Optional.empty());
-
-        // When & Then
-        assertThrows(AppException.class, () -> reservationService.getAvailableTimes(request));
-    }
 
 }
